# alga-psa

./: .dockerignore  .env.e2e  .env.example  .env.localtest  .env.runner  .env.runner.example  .gitignore  .npmrc  .nxignore  ARCHITECTURE_FIX.md  Alga-PSA-v1.2.0-Webinar.pptx  DELETION_RULES.md  DESIGN.md  Dockerfile  Dockerfile.build  Dockerfile.dev  Dockerfile.prod  LICENSE.md  Makefile  NX_SETUP.md  PLAN.md  PRODUCT.md  PR_DESCRIPTION.md  README.md  SERVICE_TYPE_REFACTOR_SUMMARY.md  TODO.md  WORKFLOW_DIAGNOSIS.md  assemblyscript-0.27.36.tgz  check-extension-state.sql  check-extension.sql  check_account_permission.sql  commit_log.txt  compose.env  container-status.txt  context.md  current_workflow_live.js  debug-extension.sql  deps.json  devbox.json  docker-compose.base.yaml  (+69 more)
.codex/: init.md
.github/: README.md  docker-compose.yaml  known-cycles.json
.impeccable/: design.json
.tmp/: pr_body.md
agent/: Cargo.toml
agent/src/: main.rs
agent/src/config/: agent_id.rs  mod.rs  settings.rs
agent/src/extension/: capabilities.rs  loader.rs  mod.rs  runtime.rs
agent/src/platform/: cache.rs  mod.rs  paths.rs  skip.rs
cli/: CONFIG.md  build.nu  cleanup-tenant.nu  colors.nu  config.nu  dev-env.nu  hosted-env.nu  main.nu  migrate.nu  portal-domain.nu  tenant.nu  utils.nu  workflows.nu
docs/: AI_coding_standards.md  DELETION_RULES.md  accounting-integration-overview.md  action-security-updates.md  ai-automation-vnc-technical.md  analytics-events-reference.md  analytics-testing-guide.md  billing-improvement-plan.md  billing.md  billing_cycles.md  citus-migration-best-practices.md  client_portal_overview.md  client_portal_plan.md  contact-api-e2e-test-plan.md  contributing.md  customer_portal_plan.md  dev_workstation.md  development-stripe-setup.md  development_guide.md  event_system.md  feature-flags.md  file_storage_system.md  getting-started.md  invoice_templates.md  job_scheduler.md  mcp-server.md  nm-store-integration.md  nushell_cheatsheet.md  overview.md  reference_data_import_quick_guide.md  reference_data_import_system.md  rest_api_implementation_plan.md  settings_reference_data_guide.md  setup_guide.md  setup_guide_windows.md  skills-and-knowledge-codex.md  softwareone-extension-architecture.md  softwareone-extension-implementation-tasks.md  softwareone-extension-phase3-6-plan.md  softwareone-extension-phase5-subtasks.md  (+12 more)
ee/remote-desktop-agent/: Cargo.toml  config.toml
ee/remote-desktop-agent/include/: rd_agent.h
ee/remote-desktop-agent/macos-app/: Package.swift  README.md  build.sh
ee/remote-desktop-agent/macos-app/RDAgentLib/: module.modulemap
ee/remote-desktop-agent/macos-app/RemoteDesktopAgent/Sources/: AgentBridge.swift  AgentController.swift  App.swift  BridgingHeader.h  PermissionManager.swift  StatusBarController.swift
ee/remote-desktop-agent/src/: capture.rs  config.rs  ffi.rs  input.rs  lib.rs  main.rs  service_client.rs  signaling.rs
ee/remote-desktop-agent/src/file_transfer/: mod.rs  protocol.rs  transfer.rs
ee/remote-desktop-service/: Cargo.toml
ee/remote-desktop-service/src/: capture.rs  desktop.rs  ipc.rs  lib.rs  main.rs  pipe_server.rs  service.rs
ee/runner/: .dockerignore  Cargo.toml  Dockerfile  build.rs
ee/runner/deploy/: runner.kservice.yaml
ee/runner/src/: lib.rs  main.rs  models.rs  secrets.rs
ee/runner/src/cache/: fs.rs  lru.rs  mod.rs
ee/runner/src/engine/: component.rs  debug.rs  debug_redis.rs  host_api.rs  loader.rs  mod.rs  stderr_pipe.rs
ee/runner/src/http/: ext_ui.rs  mod.rs  server.rs
ee/runner/src/providers/: mod.rs
ee/runner/src/registry/: client.rs
ee/runner/src/util/: errors.rs  etag.rs  limits.rs  mime.rs  mod.rs  path_sanitize.rs
ee/runner/tests/: api_execution_integration.rs  container_static_integration.rs  ext_ui_integration.rs  secret_material_tests.rs  wasmtime_host_smoke.rs
ee/runner/tests/fixtures/dynamic_component/: README.md
ee/runner/tests/fixtures/js-component-src/: index.js  package-lock.json  package.json
ee/runner/tests/fixtures/js-component-src/transpiled/: component.core2.wasm  component.d.ts  component.js
ee/runner/tests/fixtures/js-component-src/transpiled/interfaces/: alga-extension-context.d.ts  alga-extension-http.d.ts  alga-extension-logging.d.ts  alga-extension-secrets.d.ts  alga-extension-storage.d.ts  alga-extension-types.d.ts  alga-extension-ui-proxy.d.ts
ee/runner/wit/: extension-runner.wit
eslint-plugin-custom-rules/: README.md  check-required-props.js  index.js  migration-filename.js  migration-filename.md  migration-filename.test.js  no-feature-to-feature-imports.js  no-legacy-ext-imports.js
extensions/pii-scanner/: Cargo.toml
extensions/pii-scanner/src/: config.rs  lib.rs  patterns.rs  scanner.rs
extensions/pii-scanner/wit/: filesystem.wit
helm/: Chart.yaml  README.md  test-with-temporal.yaml  values-dev-env.yaml  values-hosted-env.yaml  values.yaml
hocuspocus/: AiParticipantExtension.js  CollabPersistenceExtension.js  Dockerfile  NotificationExtension.js  TicketUpdatesExtension.js  docker-compose.yaml  entrypoint.sh  hocuspocusJwtSecret.js  package-lock.json  package.json  project.json  server.js  tenantValidation.js
html/: index.html
mobile/: .env.example  App.tsx  README.md  app.json  eas.json  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
patches/: next+16.2.6.patch
pgbouncer/: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pgbouncer.ini  pgbouncer.ini.template  userlist.txt.template
scripts/: analyze_schema_coverage.py  bootstrap-playwright-db.ts  build-assemblyscript-if-needed.mjs  build-enterprise.sh  build-mem-harness.mjs  build-mem.sh  build-perf-harness.mjs  check-circular-deps.mjs  check-skip-budget.mjs  check-temporal-worker-packaging-contract.mjs  clear-wasm-binaries.ts  create-feature-package.sh  create-snapshot-workstation.sh  dev-install-extension.mjs  dev-runner.sh  dev-uninstall-extension.mjs  docker-compose-wrapper.sh  (+55 more)
server/ee/runner/: Cargo.toml
server/ee/runner/src/: main.rs
server/ee/runner/src/engine/: host_api.rs  loader.rs
server/ee/runner/src/http/: server.rs
(+12830 files in other folders)
