[package]
name = "alga-agent"
version = "0.1.0"
edition = "2021"
description = "Alga PSA Endpoint Agent - Runs security extensions on customer workstations"
license = "Proprietary"
authors = ["Nine Minds <engineering@nineminds.com>"]
repository = "https://github.com/Nine-Minds/alga-psa"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# WebAssembly runtime
wasmtime = { version = "19.0", features = ["component-model", "pooling-allocator"] }
wasmtime-wasi = "19.0"

# HTTP client for server communication
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system operations
walkdir = "2.4"
glob = "0.3"

# Platform-specific functionality
directories = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Crypto for signature verification
sha2 = "0.10"
ring = "0.17"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Configuration
config = "0.14"
toml = "0.8"

# CLI arguments
clap = { version = "4.4", features = ["derive", "env"] }

# Async compression for bundle downloads
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
tokio-util = { version = "0.7", features = ["io"] }

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs", "user"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.9"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "alga-agent"
path = "src/main.rs"
