[package]
name = "alga-ext-runner"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = { version = "38", features = ["component-model", "component-model-async"] }
wasmtime-wasi = "38"
wasmtime-wasi-http = "38"
bytes = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
url = "2"
async-trait = "0.1"
rand = "0.8"
humantime = "2"
tokio-stream = { version = "0.1", features = ["sync"] }

# New dependencies for static asset host
tower-http = { version = "0.5", features = ["fs", "set-header", "trace"] }
mime_guess = "2"
tar = "0.4"
zstd = "0.13"
moka = { version = "0.12", features = ["future"] }
tokio-util = "0.7"

# Optional S3 presign support (feature-gated)
aws-sdk-s3 = { version = "1", features = ["rustls", "behavior-version-latest"] }
aws-credential-types = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
tower = "0.5"
