[package]
name = "alga-pii-scanner"
version = "0.1.0"
edition = "2021"
description = "Alga Guard PII Scanner - WebAssembly extension for detecting PII in files"
license = "Proprietary"
authors = ["Nine Minds <engineering@nineminds.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for PII pattern matching
regex = "1.10"

# Lazy static for compiled regexes
once_cell = "1.19"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
